<resources>
    <string name="app_name">Recharge</string>

    <string name="enter_user_id">Enter User Id</string>
    <string name="empty_msg">This field don\'t  be blank</string>
    <string name="Recharge">Recharge</string>
    <string name="payments">Payments</string>
    <string name="payments_history">Payments History</string>
    <string name="Recharge_history">Recharge History</string>
    <string name="money_remitance">Money Remittance</string>
    <string name="remt_history">Remittance History</string>
    <string name="update_payment">Update Payments</string>
    <string name="profile">Profile</string>
    <string name="balance">Balance : </string>
    <string name="raise_dispute">Raise Dispute</string>
    <string name="view_dispute">View Dispute</string>
    <string name="mobile">Mobile</string>
    <string name="dth">DTH</string>
    <string name="postpaid">Postpaid</string>
    <string name="datacard">Datacard</string>
    <string name="electricity">Electricity</string>
    <string name="gas">Gas</string>
    <string name="insurance">Insurance</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="amount">Amount</string>
    <string name="operator">Select Operator</string>
    <string name="tr_id">Transaction Id</string>
    <string name="rech_type">Recharge Type</string>
    <string name="operator_">Operator</string>
    <string name="method">Method</string>
    <string name="ope_ref">Ope Ref</string>
    <string name="status">Status</string>
    <string name="date">Date and Time</string>
    <string name="account">Account</string>
    <string name="reffrence_no">Reffrence No.</string>
    <string name="req_date">Request Date</string>
    <string name="message">Message</string>
    <string name="action">Action</string>
    <string name="ben_code">Benificiary Code</string>
    <string name="ben_name">Benificiary Name</string>
    <string name="mobile_wallet">Mobile/Wallet</string>
    <string name="time">Time</string>
    <string name="change_pwd">Change Password</string>
    <string name="support_center">Support Center</string>
    <string name="enter_c_pwd">Enter Current Password</string>
    <string name="update">Update</string>
    <string name="cnfm_pwd">Confirm Password</string>
    <string name="new_pwd">New Password</string>
    <string name="change_pin">Change Pin</string>
    <string name="current_pin">Enter Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="cnfm_pin">Confirm Pin</string>
    <string name="name">Name :</string>
    <string name="company">Company :</string>
    <string name="user_name">User Name :</string>
    <string name="email">Email :</string>
    <string name="mobile_">Mobile :</string>
    <string name="address">Address :</string>
    <string name="city">City</string>
    <string name="pin">Pin :</string>
    <string name="Dispute_dtl">Dispute Details</string>
    <string name="dis_cre_date">Dispute Created : </string>
    <string name="disp_Id">Dispute Id :</string>
    <string name="cancel">Cancel</string>
    <string name="enter_tr_id">Enter Transaction Id</string>
    <string name="enter_msg">Please enter message</string>
    <string name="firm_name">Firm Name :</string>
    <string name="ifsc_code_finder">Ifsc Code Finder</string>
    <string name="bank_name">Bank Name</string>
    <string name="brnc_name">Branch Name/City</string>
    <string name="search">Search</string>
    <string name="bank_list">Bank List</string>
    <string name="ifsc_code">IFSC</string>
    <string name="branch_name">Branch Name</string>
    <string name="state">State</string>
    <string name="biil_summary">Billing Summary</string>
    <string name="user">User</string>
    <string name="user_type">User Type :</string>
    <string name="tr_type">Transaction Type</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_acc_name">Enter Account Name</string>
    <string name="reffrence_number">Reference Number</string>
    <string name="enter_acc_number">Enter Account Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="login">Login</string>
    <string name="cust_mob_num">Customer Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">Name</string>
    <string name="enter_opt">Enter otp</string>
    <string name="ben_list">Beneficiary List</string>
    <string name="ben_add">Add Benificiary</string>
    <string name="history">History</string>
    <string name="enter_ifsc">Enter IFSC Code</string>
    <string name="exit">Exit</string>
    <string name="remainig_limit">Remaining Limit : </string>
    <string name="nick_namae">Nick Name</string>
    <string name="beni_code">Benificiary Code</string>
    <string name="acc_num">Account Number</string>
    <string name="type">Type</string>
    <string name="remmit">Remit</string>
    <string name="delete">Delete</string>
    <string name="agent_tr_id">Agent Transaction Id</string>
    <string name="mr_tr_id">Mr Transaction Id</string>
    <string name="top_tr_id">Top Transaction Id</string>
    <string name="ben_his">Benificiary History</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="debit">Debit/Credit</string>
    <string name="trs">Transactions</string>
    <string name="payment_rq">Payment Request</string>
    <string name="today_ern">Today Earning</string>
    <string name="enter_comments">Enter Comments</string>
    <string name="transfer">Transfer</string>
    <string name="payment_dtll">Payment Details</string>
    <string name="rej">Reject</string>
    <string name="enter_bill_unit">Enter Bill Unit</string>
    <string name="enter_proc_unit">Enter Process Unit</string>
    <string name="cycle">Cycle</string>
    <string name="not_avail">Not Available</string>
    <string name="reinitiate_transaction">Reinitiate Transaction</string>
    <string name="bill_pymt">Bill Payment</string>
    <string name="surchareg">Surcharge</string>
    <string name="ur_cost">Your Cost</string>
    <string name="sr_num">Id: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
