<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/header" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/blune_line_whitbg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backpress"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/ifsc_code_finder"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/bnk_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/cancel_ly"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/black_line_whitebg"
                android:gravity="center_vertical"
                android:hint="@string/bank_name"
                android:lines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/br_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/cancel_ly"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_line_whitebg"
                android:gravity="center_vertical"
                android:hint="@string/brnc_name"
                android:inputType="textMultiLine"
                android:lines="1"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16dp" />


            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:background="@drawable/backpress"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>